<resources>
    <string name="app_name">PartySharing</string>
    <string name="title_feed">Feed</string>
    <string name="title_search">Search</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_interests">Interests</string>
    <string name="title_event_attend">Attend</string>
    <string name="title_event_manage">Manage</string>
    <string name="title_events">Events</string>
    <string name="event">Event</string>
    <string name="location">Location</string>
    <string name="title_description">Description</string>
    <string name="title_date">Date</string>
    <string name="title_CreatorBy">Created by:</string>
    <string name="event_creator_name">Creators Name</string>
    <string name="event_members">Members</string>
    <string name="_12">12</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_profile_location">Location</string>
    <string name="title_profile_age">Age</string>

    <string name="tab_feed">Feed</string>
    <string name="tab_pending">Pending</string>
    <string name="interest_header">Your Interests</string>
    <string name="register_tittle">Register</string>
    <string name="error_placeholder">error</string>
    <string name="register_button">register</string>
    <string name="create_event_title">Create New Event</string>
    <string name="about_event">About Event</string>
    <string name="title">Title</string>
    <string name="add_description">Add Description</string>
    <string name="choose_category">Choose Category</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="choose_date">Choose Date</string>
    <string name="event_name_placeholder">Привет</string>
    <string name="about_you">About you</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="city">City</string>

</resources>
