<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.nsu.bd.partysharing.features.register.presentation.ProfileRegisterFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/about_you" />


        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="148dp"
            android:layout_height="119dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#1111"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/baseline_add_a_photo_24" />

        <EditText
            android:id="@+id/name_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/lastname_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/lastname"
            android:maxLines="1"
            android:inputType="text"/>

        <EditText
            android:id="@+id/age_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/age"
            android:maxLines="1"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/city_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/city"
            android:maxLines="1"
            android:inputType="text"/>

        <TextView
            android:id="@+id/register_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_placeholder"
            android:textSize="15sp"
            android:gravity="center"
            android:visibility="invisible"
            android:textColor="#F00" />

        <Button
            android:id="@+id/register_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />

</LinearLayout>