<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.nsu.bd.partysharing.features.event.presentation.EventFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ru.nsu.bd.partysharing.features.feed.presentation.FeedActivity">
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:menu="@menu/navigation" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                tools:ignore="MissingConstraints"

                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="9dp"
                tools:src="@tools:sample/avatars" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="410dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="100dp" />

            <TextView
                android:id="@+id/title_event_name"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="39dp"
                android:layout_marginBottom="34dp"
                android:text="@string/event"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,RtlHardcoded" />
        </FrameLayout>



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="624dp"
            android:layout_marginTop="87dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="172dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_description"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/title_date"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/event_members"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/event_members"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/event_members_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_12"

                    android:textAlignment="viewEnd"
                    android:textSize="20sp" />


            </FrameLayout>

            <TextView
                android:id="@+id/event_creator_title"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:gravity="center"
                android:text="@string/title_CreatorBy"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/events_autor"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:gravity="center"
                android:text="@string/event_creator_name"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
</FrameLayout>