<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.nsu.bd.partysharing.features.profile.presentation.ProfileActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:menu="@menu/navigation" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="78dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/profile_fragment_replace"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            tools:ignore="MissingConstraints"

            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="9dp"
            tools:src="@tools:sample/avatars" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="410dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_profile_name"
                android:layout_width="275dp"
                android:layout_height="0dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="34dp"
                android:layout_weight="1"
                android:text="@string/title_profile"
                android:textSize="22sp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_profile_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="2"
                    android:text="@string/title_profile_location"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/title_profile_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/title_profile_age"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/profile_fragment_replace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="406dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="47dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

    </LinearLayout>
</android.support.constraint.ConstraintLayout>